# SDL2-CPP-Template

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
